home-k8s/apps/cyberchef/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cyberchef
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cyberchef
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        runAsNonRoot: true
      containers:
        - name: cyberchef
          image: ghcr.io/sigurs/container-rebuilds/cyberchef:v11.2.0@sha256:479bf297bb87b2469eac9f329c5d4c3ed826e6757e156498b01114db2611e98d
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      # We want this deployment on a specific node
      nodeSelector:
        kubernetes.io/hostname: home-k8s01.sigurs.io
