home-k8s/apps/cyberchef/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
spec:
  selector:
    app.kubernetes.io/name: cyberchef
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
