home-k8s/apps/cyberchef/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyberchef
spec:
  rules:
    - host: cyberchef.home-k8s.sigurs.io
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cyberchef
              port:
                name: http
